Add better instructions to README